Fixed about me text responsive issue with scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     }
 
     .bio{
+        min-height: 100%;
     }
 
     .img-fluid{
